Implementing lazy loading optimization to react-photo-gallery using imageRenderer

--- a/posts/mode-locking.mdx
+++ b/posts/mode-locking.mdx
@@ -1,9 +1,10 @@
 ---
 title: 'Laser Mode Locking'
 date: '2021-06-04'
+description: 'Mode locking!'
 ---
 
-# Table of Contents
+<!-- # Table of Contents
 1. [Introduction](#introduction)
 2. [Lasers, an overview](#lasers-an-overview)
 3. [Photon Absorption and Emission](#photon-absorption-and-emission)
@@ -14,7 +15,7 @@ date: '2021-06-04'
 8. [Longitudinal Modes](#longitudinal-modes)
 9. [Mode Locking](#mode-locking)
 10. [Transverse Modes](#transverse-modes)
-11. [Sources](#sources)
+11. [Sources](#sources) -->
 
 # Introduction
 
@@ -23,7 +24,7 @@ simulation is of a mode-locked laser where the cavity length, the gain
 medium, and the number of modes centered around the central mode
 frequency are specified.
 
-![](media/GUI.png)
+![](/media/GUI.png)
 
 # Lasers, an overview
 
