mdx articles are working with custom tailwind config and rehype plugins. Lightbox gallery also working with lazy loading.

--- a/posts/legally-married.mdx
+++ b/posts/legally-married.mdx
@@ -1,22 +1,22 @@
 ---
 title: 'Getting Legally Married Abroad'
 date: '2020-08-01'
+description: 'So you want to get married abroad?'
+type: 'travel'
 ---
 
-**Getting Legally Married Abroad**
-
-**Two American&#39;s Accounts of Getting Married (Legally) in Iceland**
+## Two American&#39;s Accounts of Getting Married (Legally) in Iceland
 
 So you want to get married abroad! First off, not only do you deserve all the congratulations that go along with being engaged, but also a hearty slap on the back (and wink) for all the adventure and, frankly, **challenging logistics** , in getting married in a place where you are a _nonresident_.
 
 Let&#39;s preface with a clear statement before you read any further details, because depending on what you decide, you might not need most of this info.
 
-**There are two ways to get married abroad:**
+## There are two ways to get married abroad:
 
 1. **Do all the legal stuff in your home country** , and leave the adventure wedding to be all the fun parts about getting married. The photos, the dressing up, the carefree laughter and frolicking for the camera. Doing it this way will honestly save you a ton of headache and leave you free to enjoy everything without some of the hang-ups which would come out of dealing with legalities in multiple countries.
 2. **Do the actual marriage licensing in your destination country.** This comes with a warning. If you choose to go this route, saddle up, because you are going to have to remain on your toes for all things paperwork related, for the entire duration of your wedding planning and perhaps even after you get back. Yes, you&#39;ll still get to frolic for photos and enjoy your wedding day (in fact, your actual wedding day will be a piece of cake on the paperwork front). The days before, and perhaps after, will be a fair bit more work than those who choose the route of option 1.
 
-**How do I decide?**
+## How do I decide?
 
 Many people choose to go the route of option 1, and this is totally and completely, perfectly fine. There is no harm, no shame, and you will not have to deal with some of the craziness that might arise which you can&#39;t even imagine right now (trust me, you can&#39;t).
 
@@ -30,7 +30,7 @@ This was the reasoning behind our choice, but it&#39;s a personal one that each 
 
 For us, deciding to go this route created some truly **stressful** moments in the final hour, which could have been entirely avoided on our part but were learning experiences (I&#39;ll share these later on). If you want those learning experiences packed in with your wedding then choosing to do the paperwork there might be perfect. If not though, and you&#39;d rather not saddle more unknowns and potential &quot;oh shit&quot; moments onto your wedding day, then I&#39;d say skip this and do the paperwork back home.
 
-**Doing the Marriage License Abroad (Specifically in Iceland)**
+## Doing the Marriage License Abroad (Specifically in Iceland)
 
 Two Disclaimers to begin with:
 
@@ -45,7 +45,7 @@ Lesson #2: DO NOT SIGN ANY DOCUMENT ELECTRONICALLY. No PDF signatures. No magic 
 
 Lesson #3: Be incredibly persistent yet understandingly patient, and oh so sweet in all communications. Start understanding what the process to accomplish all of this is as early as you can, get your documents in order as soon as possible and keep notes if you have to in order to keep it all straight. Write down the names of offices, phone numbers, email, and people you talk to. Record the date you last talked to them and what the status of a document was at that time. On it&#39;s own, every step is straightforward, and if it was just you that you had to worry about, you could probably accomplish this all in about 10 minutes. But government offices do not work that way, in any country, and there is a strong possibility that something seemingly small will come up and set a document or process back by a week or two. It is amazing how quickly you forget when going about your day to day life, that you mailed a Vital Records request 3 weeks ago and it is probably high time to follow up with a phone call. If you write little notes to yourself along the way to jog your memory, you will only end up pulling some of your hair out instead of all of it. And at the end you might just feel like you&#39;ve taken Diplomat training 101. Remember: persistent, but also patient. It&#39;s an art.
 
-**There are three offices in Iceland you are going to be communicating with:**
+## There are three offices in Iceland you are going to be communicating with:
 
 1. Your choice of **celebrant**. We went through _ **Siðmennt** __, the Ethical Humanist Association in Iceland since we agree with their values (if we were Icelanders, we would probably belong to Siðmennt). We also wanted a non-religious ceremony. At the time we got married, they preferred you to submit a questionnaire on their website and then they assigned a celebrant to you, who then reached out via email. This process can take several weeks or even 1-2 months, so do it as soon as you have your wedding date!_
 
@@ -67,7 +67,7 @@ This one declares your intent to marry, and has two witnesses sign to certify th
 3. Passports or Work Visas, and the appropriate stamp from customs as you enter the country.
 4. Submit all of the required documents to Iceland&#39;s Commissioners Office **no later than 3 weeks prior to the wedding date**. These can be emailed, but then you must submit the actual copies **no later than 5 days** before the wedding. I&#39;d recommend not pushing that and mail hardcopies as soon as possible. Then, upon arrival, go to the Commissioner&#39;s Office to have them see your passports in person and take their own photocopies. If everything is in order at this time, they&#39;ll give you your marriage document to later have your celebrant sign at the ceremony.
 
-**Offices in the US you will or might communicate with:**
+## Offices in the US you will or might communicate with:
 
 1. **The Office of Vital Records** in your home state is who you will request a Search of Vital Records from for Marriage (and Divorce, if you need it). Here you also need to communicate with the **Apostilles Office** because Iceland will need these Vital Records Searches to be official!
 2. **Birth Certificates** (usually can order online these days).
@@ -75,7 +75,7 @@ This one declares your intent to marry, and has two witnesses sign to certify th
 4. **The Attorney General&#39;s Office**. This one is a maybe. If you do your research about validating a marriage license from another country in the United States, everything says to contact the Office of the Attorney General. Full disclosure, I did this in two separate states (twice, for both states). All four times I was sent to various other offices and told that the Attorney General does not handle this in any capacity. Proof that Google is not always right. After several dead ends of calling different offices, the Vital Records Office was able to point me in a good direction. Skip contacting this office and go directly to 5 if you can, but if 5 sends you away, then maybe try the Attorney General. 4 and 5 are tricky because they sort of depend on which state you live in, and there isn&#39;t a clear answer.
 5. **Clerk &amp; Recorders Office.** This is where we ended up showing our Icelandic marriage license and having them file something so that our marriage is legally recorded in the U.S. More on this later.
 
-**A Suggested Timeline for Staging all of this:**
+## A Suggested Timeline for Staging all of this:
 
 When I first started researching all of this, it was a bit overwhelming to understand everything needed, especially since some of it has the added time factor involved with due dates. Here&#39;s a suggested timeline:
 
