fixed issues with certain mdx components

--- a/posts/mode-locking.mdx
+++ b/posts/mode-locking.mdx
@@ -462,30 +462,19 @@ fundamental transverse mode, TEM00.
 <Image alt={`gaussian`} src={`/images/mode-locking/gaussian.png`} width={790} height={335}  />
 
 
-<!-- ## Sources
+## Sources
 
-<https://micro.magnet.fsu.edu/primer/java/lasers/electroncycle/index.html>
+* [Spontaneous and Stimulated Processes](https://micro.magnet.fsu.edu/primer/java/lasers/electroncycle/index.html)
+* [Stimulated emission - Wikipedia](https://en.wikipedia.org/wiki/Stimulated_emission)
+* [Theodore Maiman - Wikipedia](https://en.wikipedia.org/wiki/Theodore_Maiman)
+* [Introduction of Gaussian Beam](https://flex.phys.tohoku.ac.jp/~rsaito/saito20-GaussianBeam.pdf)
+* [Transverse Laser Modes](https://laser.physics.sunysb.edu/_alex/tmodes/webreport.html)
+* [Laser Basics](https://www.slideshare.net/dlorenser/part-i-laser-basics-lorenser-2009)
+* [Stimulated Emission](https://www.rp-photonics.com/stimulated_emission.html)
+* [Lasers - Basic Concepts](https://spie.org/samples/TT53.pdf)
+* [Laser Resonator Modes - Edmund Optics](https://www.edmundoptics.com.sg/knowledge-center/application-notes/lasers/laser-resonator-modes/)
+* [Critical Laser Components - mks Newport](https://www.newport.com/n/critical-laser-components)
+* [Lasers](http://labman.phys.utk.edu/phys222core/modules/m11/lasers.html)
+* [Decay of metastable state: spontaneous vs. stimulated emission.](https://physics.stackexchange.com/questions/75247/decay-of-metastable-state-spontaneous-vs-stimulated-emission)
+* [SS Laser Testing, Adjustment, Repair](https://www.photonlexicon.com/laserfaq/laserstr.htm)
 
-<https://en.wikipedia.org/wiki/Stimulated_emission>
-
-<https://en.wikipedia.org/wiki/Theodore_Maiman>
-
-<https://flex.phys.tohoku.ac.jp/~rsaito/saito20-GaussianBeam.pdf>
-
-<https://laser.physics.sunysb.edu/_alex/tmodes/webreport.html>
-
-<https://www.slideshare.net/dlorenser/part-i-laser-basics-lorenser-2009>
-
-<https://www.rp-photonics.com/stimulated_emission.html>
-
-<https://spie.org/samples/TT53.pdf>
-
-<https://www.edmundoptics.com.sg/knowledge-center/application-notes/lasers/laser-resonator-modes/>
-
-<https://www.newport.com/n/critical-laser-components>
-
-<http://labman.phys.utk.edu/phys222core/modules/m11/lasers.html>
-
-<https://physics.stackexchange.com/questions/75247/decay-of-metastable-state-spontaneous-vs-stimulated-emission>
-
-<https://www.photonlexicon.com/laserfaq/laserstr.htm> -->
